--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,11 @@
-/* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+/* В этом файле будут храниться все значения переменных в исходном состоянии, 
+а так же их изменения в зависимости от ширины устройства */
+:root {
+  --text-main: "Inter-Variable.woff2", sans-serif;
+  --text-accent: "PressStart2P-Regular.woff", sans-serif;
+  --wdth-main-text: 400;
+  --wdth-title-text: 700; 
+  --bg-color: #FFF;
+  --text-color: #000;
+  
+}
