--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,1 +1,26 @@
 /* В этом файле вы импортируете все шрифты для сайта. Один из них вариативный и требует особенной настройки */
+@font-face {
+    font-display: swap;
+    font-family: 'PressStart2P-Regular.woff';
+    src: local('PressStart2P-Regular'),
+    url(./PressStart2P-Regular.woff) format('woff');
+    font-weight: normal;
+  }
+
+  @font-face {
+    font-display: swap;
+    font-family: 'Inter-Variable.woff2';
+    src: local('Inter-Variable'),
+    url(./Inter-Variable.woff2) format('woff2 supports variations'),
+    url(./Inter-Variable.woff2) format('woff2-variations');
+    /*font-weight: [400] [465];*/
+    /* ?from figma?
+    font-size: 18px;
+    font-style: normal;
+    line-height: 1.16667;
+    */
+  }
+
+
+    /*font-weight: [минимальное значение] [максимальное значение];
+    font-stretch: [минимальное значение]% [максимальное значение]%;*/
