--- a/styles/style.css
+++ b/styles/style.css
@@ -17,4 +17,9 @@
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  font-family: var(--text-main, sans-serif);
+  font-variation-settings: 'wdth' var(--wdth-main-text);
+  line-height: 1.3;
+  color: var(--text-color, #000);
+  background-color: var(--bg-color, #FFF);
 }
