--- a/styles/variables.css
+++ b/styles/variables.css
@@ -7,5 +7,8 @@
   --wdth-title-text: 700; 
   --bg-color: #FFF;
   --text-color: #000;
-  
+  --bg-cover-grad: #d3d3d3;
+  --bg-gradient1: #e7e7e7;
+  --bg-gradient2: #1a1a1a;
+
 }
