--- a/styles/style.css
+++ b/styles/style.css
@@ -11,22 +11,69 @@
 ✦ button__text — для обозначения текстового элемента внутри кнопки
 
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
-
 */
 
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
   font-family: var(--text-main, sans-serif);
-  font-variation-settings: 'wdth' var(--wdth-main-text);
+  font-variation-settings: "wdth" var(--wdth-main-text);
   line-height: 1.3;
   color: var(--text-color, #000);
-  background-color: var(--bg-color, #FFF);
-  background-image: 
-    repeating-linear-gradient(90deg, var(--bg-cover-grad), transparent 2px),
+  background-color: var(--bg-color, #fff);
+  background-image: repeating-linear-gradient(
+      90deg,
+      var(--bg-cover-grad),
+      transparent 2px
+    ),
     repeating-linear-gradient(0deg, var(--bg-cover-grad), transparent 2px),
     linear-gradient(var(--bg-gradient1), var(--bg-gradient2));
   background-size: cover;
-  /*background-position: center;*/
   background-attachment: fixed;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
+}
+
+/*header*/
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: nowrap;
+  background-color: var(--bg-color);
+  min-width: 375px;
+  max-width: 696px;
+  block-size: 327px;
+  margin-block-start: 100px;
+  margin-block-end: 104px;
+  border: 2px solid var(--text-color);
+  font-family: var(--text-accent);
+  text-transform: uppercase;
+}
+
+.header_title {
+  margin-block-start: 113px;
+  margin-block-end: 10px;
+  font-size: clamp(3.0625rem, 2.4847rem + 2.4653vw, 4.0625rem);
+}
+
+.header_subtitle {
+  margin-block-end: 18px;
+  font-size: clamp(0.875rem, 0.55rem + 1.3867vw, 1.4375rem);
+}
+
+/*nav-bar*/
+.theme-menu__button{
+  text-transform: uppercase;
+}
+
+/*main*/
+.content {
+}
+.content__card {
+}
+
+.floppy {
 }
