card and btn floppy html

--- a/styles/themes.css
+++ b/styles/themes.css
@@ -11,7 +11,7 @@
   --wdth-main-text: 465;
   --wdth-title-text: 785;  
   --bg-color: #000;
-  --text-color: #00CC14;
+  --main-color: #00CC14;
   --bg-cover-grad: #000000;
   --bg-gradient1: #007f0c;
   --bg-gradient2: #004306;
@@ -24,7 +24,7 @@
         --wdth-main-text: 465;
         --wdth-title-text: 785;  
         --bg-color: #000;
-        --text-color: #00CC14;
+        --main-color: #00CC14;
         --bg-cover-grad: #000000;
         --bg-gradient1: #007f0c;
         --bg-gradient2: #004306;
@@ -37,7 +37,7 @@
   --wdth-main-text: 400;
   --wdth-title-text: 700; 
   --bg-color: #FFF;
-  --text-color: #000;
+  --main-color: #000;
   --bg-cover-grad: #d3d3d3;
   --bg-gradient1: #e7e7e7;
   --bg-gradient2: #1a1a1a;
