--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,7 @@
   font-family: var(--text-main, sans-serif);
   font-variation-settings: "wdth" var(--wdth-main-text);
   line-height: 1.3;
-  color: var(--text-color, #000);
+  color: var(--main-color, #000);
   background-color: var(--bg-color, #fff);
   background-image: repeating-linear-gradient(
       90deg,
@@ -30,10 +30,10 @@
     linear-gradient(var(--bg-gradient1), var(--bg-gradient2));
   background-size: cover;
   background-attachment: fixed;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  align-items: center;
+}
+
+.wdth-content {
+  min-width: var(--wdth-content);
 }
 
 /*header*/
@@ -43,12 +43,10 @@
   align-items: center;
   flex-wrap: nowrap;
   background-color: var(--bg-color);
-  min-width: 375px;
-  max-width: 696px;
   block-size: 327px;
   margin-block-start: 100px;
-  margin-block-end: 104px;
-  border: 2px solid var(--text-color);
+  margin-block-end: 100px;
+  border: 2px solid var(--main-color);
   font-family: var(--text-accent);
   text-transform: uppercase;
 }
@@ -57,6 +55,7 @@
   margin-block-start: 113px;
   margin-block-end: 10px;
   font-size: clamp(3.0625rem, 2.4847rem + 2.4653vw, 4.0625rem);
+  text-decoration: none;
 }
 
 .header_subtitle {
@@ -65,15 +64,95 @@
 }
 
 /*nav-bar*/
-.theme-menu__button{
+.theme-menu__list {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.theme-menu__button {
+  padding: 0;
+  border: none;
+  background-color: transparent;
   text-transform: uppercase;
+  font-size: 14px;
+  margin-inline-start: 21px;
+}
+
+.theme-menu__button:disabled::before {
+  content: "▶";
+  position: absolute;
+  margin-left: -19px;
 }
 
 /*main*/
 .content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: nowrap;
 }
 .content__card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: nowrap;
+  background-color: var(--bg-color);
+  border: 2px solid var(--main-color);
+  margin-block-end: 50px;
 }
 
-.floppy {
+.content__card-title {
+  border-bottom: 2px solid var(--main-color);
+  inline-size: 100%;
+  block-size: 52px;
+  color: var(--themes-main-color, #000);
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  padding: 5px 10px;
+}
+
+.content__card-text {
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 21px;
+  padding: 25px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  gap: 27px;
+}
+
+
+.btn-like {
+  width: 130px;
+  height: 38px;
+  padding: 9px 17px;
+  border: 2px solid var(--main-color);
+  background-color: transparent;
+  font-family: var(--text-accent);
+  font-size: 14px;
+  align-self: end;
+}
+
+.footer {
+  border: 2px solid var(--main-color);
+  background-color: #fff;
+  width: 306px;
+  height: 80px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  font-family: var(--text-accent);
+  font-size: 14px;
+  line-height: 0.9;
+}
+
+@media (width <= 375px) {
 }
