--- a/styles/variables.css
+++ b/styles/variables.css
@@ -6,9 +6,9 @@
   --wdth-main-text: 400;
   --wdth-title-text: 700; 
   --bg-color: #FFF;
-  --text-color: #000;
+  --main-color: #000;
   --bg-cover-grad: #d3d3d3;
   --bg-gradient1: #e7e7e7;
   --bg-gradient2: #1a1a1a;
-
+  --wdth-content: 100vi;
 }
