--- a/styles/themes.css
+++ b/styles/themes.css
@@ -12,6 +12,7 @@
   --wdth-title-text: 785;  
   --bg-color: #000;
   --main-color: #00CC14;
+  --shadow-color: #000;
   --bg-cover-grad: #000000;
   --bg-gradient1: #007f0c;
   --bg-gradient2: #004306;
@@ -25,6 +26,7 @@
         --wdth-title-text: 785;  
         --bg-color: #000;
         --main-color: #00CC14;
+        --shadow-color: #000;
         --bg-cover-grad: #000000;
         --bg-gradient1: #007f0c;
         --bg-gradient2: #004306;
@@ -38,6 +40,7 @@
   --wdth-title-text: 700; 
   --bg-color: #FFF;
   --main-color: #000;
+  --shadow-color: #fff;
   --bg-cover-grad: #d3d3d3;
   --bg-gradient1: #e7e7e7;
   --bg-gradient2: #1a1a1a;
