--- a/styles/style.css
+++ b/styles/style.css
@@ -100,18 +100,46 @@
   background-color: var(--bg-color);
   border: 2px solid var(--main-color);
   margin-block-end: 50px;
+  width: 100vi;
 }
 
 .content__card-title {
   border-bottom: 2px solid var(--main-color);
   inline-size: 100%;
   block-size: 52px;
-  color: var(--themes-main-color, #000);
+  color: var(--main-color);
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
   padding: 5px 10px;
+}
+
+.content__card-image {
+  /*max-width: -webkit-fill-available;*/
+  position: relative;
+    background-size: cover;
+}
+
+.content__card-image p {
+  position: absolute;
+  top: 25px;
+  right: 11px;
+  display: flex;
+  justify-content: flex-end;
+  color: var(--main-color);
+  font-family: var(--text-accent);
+  line-height: normal;
+  font-size: 14px;
+  text-shadow: -1px 0 var(--shadow-color), 0 1px var(--shadow-color), 1px 0 var(--shadow-color), 0 -1px var(--shadow-color);
+  opacity: 0.5;
+  mix-blend-mode: hard-light;
+}
+
+@supports (-webkit-tmix-blend-mode: 2px #000) {
+  .stroke {
+    -webkit-text-stroke: 2px #000;
+  }
 }
 
 .content__card-text {
@@ -124,23 +152,36 @@
   flex-direction: column;
   flex-wrap: nowrap;
   gap: 27px;
+  border-top: 2px solid var(--main-color);
 }
 
-
-.btn-like {
-  width: 130px;
+.content__card-btn-like {
   height: 38px;
+  align-self: end;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+}
+
+/*heart*/
+.like-icon {
+  background-color: #fff;
+  border: none;
+}
+
+.card__like-button{
+  width: 130px;
   padding: 9px 17px;
   border: 2px solid var(--main-color);
   background-color: transparent;
   font-family: var(--text-accent);
   font-size: 14px;
-  align-self: end;
 }
 
 .footer {
   border: 2px solid var(--main-color);
-  background-color: #fff;
+  background-color: var(--bg-color);
   width: 306px;
   height: 80px;
   display: flex;
@@ -154,5 +195,6 @@
   line-height: 0.9;
 }
 
-@media (width <= 375px) {
+@media (width >= 375px) {
+
 }
