--- a/styles/style.css
+++ b/styles/style.css
@@ -70,6 +70,12 @@
   gap: 8px;
 }
 
+.theme-menu__button:disabled::before {
+  content: "▶";
+  position: absolute;
+  margin-left: -19px;
+}
+
 .theme-menu__button {
   padding: 0;
   border: none;
@@ -77,12 +83,43 @@
   text-transform: uppercase;
   font-size: 14px;
   margin-inline-start: 21px;
+  position: relative;
+  padding-bottom: 2px;
 }
 
-.theme-menu__button:disabled::before {
-  content: "▶";
+.theme-menu__button::after{
+  content: '';
   position: absolute;
-  margin-left: -19px;
+  left: 0;
+  bottom: 0;
+  width: 0;
+  height: 2px;
+  background-color: var(--main-color);
+  transition: all 0.3s;
+}
+
+.theme-menu__button:hover::after{
+  width: 100%;
+}
+
+.theme-menu__button:disabled {
+  opacity: 0.6;
+}
+
+.theme-menu__button:active {
+  opacity: 0.6;
+}
+
+.theme-menu__button:hover {
+  cursor: pointer;
+}
+
+.theme-menu__button:focus {
+  /*?*/
+}
+
+.theme-menu__button:focus-visible {
+  
 }
 
 /*main*/
