--- a/styles/animations.css
+++ b/styles/animations.css
@@ -39,3 +39,20 @@
         transform: scale(1);
     }
   }
+
+  @keyframes heart {
+    from {
+        transform: scale(1);
+        translate: 0 0;
+    }
+    to {
+        transform: scale(1.3);
+        translate: -15% -15%;
+    }
+  }
+
+  @keyframes sparks {
+    to {
+        opacity: 100%;
+    }
+  }
