--- a/styles/variables.css
+++ b/styles/variables.css
@@ -11,6 +11,8 @@
   --bg-cover-grad: #d3d3d3;
   --bg-gradient1: #e7e7e7;
   --bg-gradient2: #1a1a1a;
+  --btn-text-color: #fff;
+  --bg-heart: #ff0000;
   --wdth-phone: 100%;
   --wdth-laptop: 696px;
 }
