--- a/styles/style.css
+++ b/styles/style.css
@@ -153,6 +153,10 @@
   background-size: cover;
 }
 
+.picture{
+  display: block;
+}
+
 .content__card-image p {
   position: absolute;
   top: 25px;
@@ -244,7 +248,6 @@
   fill: var(--bg-heart);
   transition: fill 0.3s ease-in-out;
   transition-delay: 0.06s;
-
 }
 
 .like-icon.is-liked .core {
@@ -273,24 +276,26 @@
   transform: scale(1);
 }
 
+.contour {
+  transition: fill 0.1s linear; /*?Контур лучше возвращать на место побыстрее — линейно, за 0.1s, без задержек?*/
+}
+
 /*like-button*/
 .card__like-button {
   width: 130px;
   padding: 9px 17px;
   border: 2px solid var(--main-color);
   background-color: transparent;
-  font-family: var(--text-accent);
-  font-size: 14px;
   transition: box-shadow 0.3s linear;
   position: relative;
   overflow: hidden;
-  color: var(--btn-text-color);
 }
 
 .theme-menu__button:hover,
 .card__like-button:hover,
 .save_button:hover,
-.card__icon-button:hover {
+.card__icon-button:hover,
+.dialog__btn-close:hover {
   cursor: pointer;
 }
 
@@ -320,21 +325,63 @@
   translate: 0 0;
 }
 
-.save_button::before {
-  content: "";
-  position: absolute;
-  inset: 0;
-  background-color: var(--main-color);
-  transition: transform 0.5s ease-in-out;
-}
-
 .button__text {
   z-index: 1;
   display: block;
   position: relative;
   mix-blend-mode: difference;
+  font-family: var(--text-accent);
+  font-size: 14px;
+  color: var(--btn-text-color);
+  line-height: 0.9;
+  border: 2px solid var(--main-color);
+  background-color: transparent;
 }
 
+/*dialog window*/
+.dialog[open] {
+  font-family: var(--text-accent);
+  color: #000;
+  font-size: 14px;
+  line-height: 1.5;
+  text-transform: uppercase;
+  background-color: #fff;
+  display: grid;
+  grid-template-areas:
+    "a b"
+    "c c";
+  gap: 20px;
+  align-items: center;
+}
+
+dialog::backdrop {
+  background-color: #000;
+  opacity: 0.75;
+}
+
+.dialog__floppy {
+  grid-area: a;
+  width: 39px;
+  height: 39px;
+}
+
+.dialog__text {
+  grid-area: b;
+  max-width: 234px;
+}
+
+.dialog__btn-close {
+  grid-area: c;
+  border: 2px solid #000;
+  width: 293px;
+  height: 38px;
+  padding: 9px 17px;
+  background-color: inherit;
+  margin-block-start: 10px;
+  line-height: 0.9;
+}
+
+/*button save, floppy*/
 .save_button {
   border: 2px solid var(--main-color);
   background-color: var(--bg-color);
@@ -346,9 +393,7 @@
   justify-content: center;
   align-items: center;
   gap: 8px;
-  font-family: var(--text-accent);
-  font-size: 14px;
-  line-height: 0.9;
+
   position: relative;
   overflow: hidden;
   color: var(--btn-text-color);
@@ -369,9 +414,27 @@
   color: var(--btn-text-color);
 }
 
+.dialog-id {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+}
+
 @media (width >= 375px) {
   .wdth-content {
     width: var(--wdth-laptop);
+    height: 364px;
+  }
+
+  .header_title{
+    margin-block-start: 127px;
+    margin-block-end: 6px;
+  }
+  
+  .content__card{
+    width: 696px;
   }
 
   .save_button {
