--- a/styles/style.css
+++ b/styles/style.css
@@ -48,6 +48,7 @@
   block-size: 327px;
   margin-block-start: 100px;
   margin-block-end: 100px;
+  width: 100%;
   border: 2px solid var(--main-color);
   font-family: var(--text-accent);
   text-transform: uppercase;
@@ -138,7 +139,6 @@
 .content__card-title {
   border-bottom: 2px solid var(--main-color);
   inline-size: 100%;
-  block-size: 52px;
   color: var(--main-color);
   font-size: 18px;
   font-style: normal;
@@ -334,18 +334,17 @@
   font-size: 14px;
   color: var(--btn-text-color);
   line-height: 0.9;
-  border: 2px solid var(--main-color);
   background-color: transparent;
 }
 
 /*dialog window*/
 .dialog[open] {
   font-family: var(--text-accent);
-  color: #000;
+  color: var(--main-color);
   font-size: 14px;
   line-height: 1.5;
   text-transform: uppercase;
-  background-color: #fff;
+  background-color: var(--bg-color);
   display: grid;
   grid-template-areas:
     "a b"
@@ -372,7 +371,7 @@ dialog::backdrop {
 
 .dialog__btn-close {
   grid-area: c;
-  border: 2px solid #000;
+  border: 2px solid var(--main-color);
   width: 293px;
   height: 38px;
   padding: 9px 17px;
@@ -422,10 +421,13 @@ dialog::backdrop {
   align-items: center;
 }
 
-@media (width >= 375px) {
+@media (width > 375px) {
   .wdth-content {
     width: var(--wdth-laptop);
-    height: 364px;
+  }
+
+  .header{
+        height: 364px;
   }
 
   .header_title{
@@ -436,7 +438,13 @@ dialog::backdrop {
   .content__card{
     width: 696px;
   }
+.content__card-image{
+  width: 100%;
+}
 
+.picture{
+  width: 100%;
+}
   .save_button {
     flex-direction: row;
     inline-size: 335px;
