--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,7 +1,6 @@
-/* В этом файле вы импортируете все шрифты для сайта. Один из них вариативный и требует особенной настройки */
 @font-face {
     font-display: swap;
-    font-family: 'PressStart2P-Regular.woff';
+    font-family: 'Press Start 2P';
     src: local('PressStart2P-Regular'),
     url(./PressStart2P-Regular.woff) format('woff');
     font-weight: normal;
@@ -9,11 +8,9 @@
 
   @font-face {
     font-display: swap;
-    font-family: 'Inter-Variable.woff2';
+    font-family: 'Inter';
     src: local('Inter-Variable'),
     url(./Inter-Variable.woff2) format('woff2 supports variations'),
     url(./Inter-Variable.woff2) format('woff2-variations');
-    font-size: 18px;
-    font-style: normal;
-    line-height: 1.16667;
+    font-weight: normal;
   }
