--- a/styles/style.css
+++ b/styles/style.css
@@ -15,11 +15,11 @@
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
-  font-family: var(--text-main, sans-serif);
+  font-family: "Inter", sans-serif;
   font-variation-settings: "wdth" var(--wdth-main-text);
   line-height: 1.3;
-  color: var(--main-color, #000);
-  background-color: var(--bg-color, #fff);
+  color: var(--main-color2, #000);
+  background-color: var(--main-color1, #fff);
   background-image: repeating-linear-gradient(
       90deg,
       var(--bg-cover-grad),
@@ -35,7 +35,7 @@
 }
 
 .wdth-content {
-  max-width: var(--wdth-phone);
+  max-width: 100vi;
 }
 
 /*header*/
@@ -44,13 +44,13 @@
   flex-direction: column;
   align-items: center;
   flex-wrap: nowrap;
-  background-color: var(--bg-color);
+  background-color: var(--main-color1);
   block-size: 327px;
   margin-block-start: 100px;
   margin-block-end: 100px;
   width: 100%;
-  border: 2px solid var(--main-color);
-  font-family: var(--text-accent);
+  border: 2px solid var(--main-color2);
+  font-family: "Press Start 2P", sans-serif;
   text-transform: uppercase;
 }
 
@@ -98,8 +98,12 @@
   bottom: 0;
   width: 0;
   height: 2px;
-  background-color: var(--main-color);
+  background-color: var(--main-color2);
   transition: all 0.3s;
+}
+
+.theme-menu__button:hover {
+  cursor: pointer;
 }
 
 .theme-menu__button:hover::after {
@@ -122,21 +126,22 @@
   align-items: center;
   flex-wrap: nowrap;
 }
+
 .content__card {
   display: flex;
   flex-direction: column;
   align-items: center;
   flex-wrap: nowrap;
-  background-color: var(--bg-color);
-  border: 2px solid var(--main-color);
+  background-color: var(--main-color1);
+  border: 2px solid var(--main-color2);
   margin-block-end: 50px;
   width: 100vi;
 }
 
 .content__card-title {
-  border-bottom: 2px solid var(--main-color);
+  border-bottom: 2px solid var(--main-color2);
   inline-size: 100%;
-  color: var(--main-color);
+  color: var(--main-color2);
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
@@ -176,7 +181,7 @@
 }
 
 .pic7 {
-  filter: sepia(0.6) ;
+  filter: sepia(0.6);
 }
 
 .pic8 {
@@ -189,8 +194,8 @@
   right: 11px;
   display: flex;
   justify-content: flex-end;
-  color: var(--main-color);
-  font-family: var(--text-accent);
+  color: var(--main-color2);
+  font-family: "Press Start 2P", sans-serif;
   line-height: normal;
   font-size: 14px;
   text-shadow: -1px 0 var(--shadow-color), 0 1px var(--shadow-color),
@@ -215,7 +220,7 @@
   flex-direction: column;
   flex-wrap: nowrap;
   gap: 27px;
-  border-top: 2px solid var(--main-color);
+  border-top: 2px solid var(--main-color2);
 }
 
 .content__card-btn-like {
@@ -229,7 +234,7 @@
 
 /*heart-button*/
 .card__icon-button {
-  background-color: var(--bg-color);
+  background-color: var(--main-color1);
   border: none;
 }
 
@@ -238,40 +243,44 @@
 }
 
 .card__icon-button:focus-visible {
-  border: 2px solid var(--main-color);
+  border: 2px solid var(--main-color2);
 }
 
 .card__icon-button:hover .main-body,
 .card__icon-button:hover .core {
-  fill: var(--main-color);
+  fill: var(--main-color2);
   cursor: pointer;
+}
+
+.card__icon-button:hover{
+ cursor: pointer;
 }
 
 .core {
   transition: fill 0.3s ease-in-out;
   transition-delay: 0.03s;
-  fill: var(--bg-color);
+  fill: var(--main-color1);
 }
 
 .main-body {
   transition: fill 0.05s ease-in-out;
   transition-delay: 0.3s;
-  fill: var(--bg-color);
+  fill: var(--main-color1);
 }
 
 .card__icon-button:active .main-body,
 .card__icon-button:active .core {
-  fill: var(--bg-heart);
+  fill: #ff0000;
 }
 
 .like-icon.is-liked .main-body {
-  fill: var(--bg-heart);
+  fill: #ff0000;
   transition: fill 0.3s ease-in-out;
   transition-delay: 0.06s;
 }
 
 .like-icon.is-liked .contour {
-  fill: var(--bg-heart);
+  fill: #ff0000;
   transition: fill 0.3s ease-in-out;
   transition-delay: 0.06s;
 }
@@ -279,7 +288,7 @@
 .like-icon.is-liked .core {
   transition: fill 0.3s ease-in-out;
   transition-delay: 0.03s;
-  fill: var(--bg-heart);
+  fill: #ff0000;
 }
 
 .like-icon.is-liked .heart {
@@ -310,37 +319,33 @@
 .card__like-button {
   width: 130px;
   padding: 9px 17px;
-  border: 2px solid var(--main-color);
+  border: 2px solid var(--main-color2);
   background-color: transparent;
   transition: box-shadow 0.3s linear;
   position: relative;
   overflow: hidden;
 }
 
-.theme-menu__button:hover,
-.card__like-button:hover,
-.save_button:hover,
-.card__icon-button:hover,
-.dialog__btn-close:hover {
+.card__like-button:hover {
   cursor: pointer;
 }
 
 .card__like-button:focus {
   outline: none;
-  border: 2px solid var(--main-color, #000);
+  border: 2px solid var(--main-color2, #000);
 }
 
 .card__like-button:focus-visible {
   animation-direction: normal;
   outline: none;
-  box-shadow: 2px 2px 0px 0px var(--main-color);
+  box-shadow: 2px 2px 0px 0px var(--main-color2);
 }
 
 .card__like-button::before {
   content: "";
   position: absolute;
   inset: 0;
-  background-color: var(--main-color);
+  background-color: var(--main-color2);
   transition: translate 0.5s ease-in-out;
   translate: -100% 0;
 }
@@ -351,12 +356,16 @@
   translate: 0 0;
 }
 
+.save_button:hover{
+  cursor: pointer;
+}
+
 .button__text {
   z-index: 1;
   display: block;
   position: relative;
   mix-blend-mode: difference;
-  font-family: var(--text-accent);
+  font-family: "Press Start 2P", sans-serif;
   font-size: 14px;
   color: var(--btn-text-color);
   line-height: 0.9;
@@ -365,12 +374,12 @@
 
 /*dialog window*/
 .dialog[open] {
-  font-family: var(--text-accent);
-  color: var(--main-color);
+  font-family: "Press Start 2P", sans-serif;
+  color: var(--main-color2);
   font-size: 14px;
   line-height: 1.5;
   text-transform: uppercase;
-  background-color: var(--bg-color);
+  background-color: var(--main-color1);
   display: grid;
   grid-template-areas:
     "a b"
@@ -397,7 +406,7 @@ dialog::backdrop {
 
 .dialog__btn-close {
   grid-area: c;
-  border: 2px solid var(--main-color);
+  border: 2px solid var(--main-color2);
   width: 293px;
   height: 38px;
   padding: 9px 17px;
@@ -406,10 +415,14 @@ dialog::backdrop {
   line-height: 0.9;
 }
 
+.dialog__btn-close:hover {
+  cursor: pointer;
+}
+
 /*button save, floppy*/
 .save_button {
-  border: 2px solid var(--main-color);
-  background-color: var(--bg-color);
+  border: 2px solid var(--main-color2);
+  background-color: var(--main-color1);
   width: 306px;
   height: 80px;
   display: flex;
@@ -421,13 +434,14 @@ dialog::backdrop {
   position: relative;
   overflow: hidden;
   color: var(--btn-text-color);
+  margin-block-end: 102px;
 }
 
 .save_button::before {
   content: "";
   position: absolute;
   inset: 0;
-  background-color: var(--main-color);
+  background-color: var(--main-color2);
   transition: translate 0.5s ease-in-out;
   translate: -100% 0;
 }
@@ -448,7 +462,7 @@ dialog::backdrop {
 
 @media (width > 375px) {
   .wdth-content {
-    width: var(--wdth-laptop);
+    width: 696px;
   }
 
   .header {
