--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,16 +1,16 @@
 @font-face {
-    font-display: swap;
-    font-family: 'Press Start 2P';
-    src: local('PressStart2P-Regular'),
-    url(./PressStart2P-Regular.woff) format('woff');
-    font-weight: normal;
-  }
+  font-display: swap;
+  font-family: "Press Start 2P";
+  src: local("PressStart2P-Regular"),
+    url(./PressStart2P-Regular.woff) format("woff");
+  font-weight: normal;
+}
 
-  @font-face {
-    font-display: swap;
-    font-family: 'Inter';
-    src: local('Inter-Variable'),
-    url(./Inter-Variable.woff2) format('woff2 supports variations'),
-    url(./Inter-Variable.woff2) format('woff2-variations');
-    font-weight: normal;
-  }
+@font-face {
+  font-display: swap;
+  font-family: "Inter";
+  src: local("Inter-Variable"),
+    url(./Inter-Variable.woff2) format("woff2 supports variations"),
+    url(./Inter-Variable.woff2) format("woff2-variations");
+  font-weight: normal;
+}
