--- a/styles/themes.css
+++ b/styles/themes.css
@@ -5,41 +5,41 @@
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
 
-:root.theme-dark{
-    --text-accent: "Press Start 2P", sans-serif;
+:root.theme-dark {
+  --text-accent: "Press Start 2P", sans-serif;
+  --wdth-main-text: 465;
+  --wdth-title-text: 785;
+  --main-color1: #000000;
+  --main-color2: #00cc14;
+  --shadow-color: #000000;
+  --bg-cover-grad: #000000;
+  --bg-gradient1: #007f0c;
+  --bg-gradient2: #004306;
+  --btn-text-color: #00cc14;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
     --wdth-main-text: 465;
-    --wdth-title-text: 785;  
+    --wdth-title-text: 785;
     --main-color1: #000000;
-    --main-color2: #00CC14;
+    --main-color2: #00cc14;
     --shadow-color: #000000;
     --bg-cover-grad: #000000;
     --bg-gradient1: #007f0c;
     --bg-gradient2: #004306;
-    --btn-text-color: #00CC14;
-}
-
-@media (prefers-color-scheme: dark) {
-    :root {
-        --wdth-main-text: 465;
-        --wdth-title-text: 785;  
-        --main-color1: #000000;
-        --main-color2: #00CC14;
-        --shadow-color: #000000;
-        --bg-cover-grad: #000000;
-        --bg-gradient1: #007f0c;
-        --bg-gradient2: #004306;
-        --btn-text-color: #00CC14;
-    }
+    --btn-text-color: #00cc14;
+  }
 }
 
 :root.theme-light {
-    --wdth-main-text: 400;
-    --wdth-title-text: 700; 
-    --main-color1: #FFFFFF;
-    --main-color2: #000000;
-    --shadow-color: #FFFFFF;
-    --bg-cover-grad: #d3d3d3;
-    --bg-gradient1: #e7e7e7;
-    --bg-gradient2: #1a1a1a;
-    --btn-text-color: #FFFFFF;
+  --wdth-main-text: 400;
+  --wdth-title-text: 700;
+  --main-color1: #ffffff;
+  --main-color2: #000000;
+  --shadow-color: #ffffff;
+  --bg-cover-grad: #d3d3d3;
+  --bg-gradient1: #e7e7e7;
+  --bg-gradient2: #1a1a1a;
+  --btn-text-color: #ffffff;
 }
