--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -12,5 +12,5 @@
   src: local("Inter-Variable"),
     url(./Inter-Variable.woff2) format("woff2 supports variations"),
     url(./Inter-Variable.woff2) format("woff2-variations");
-  font-weight: normal;
+  font-weight: 400 785;
 }
